# unibenchmark

./: README.md  meson.build  org.gnome.unibenchmark.json
data/: meson.build  org.gnome.unibenchmark.appdata.xml.in  org.gnome.unibenchmark.desktop.in  org.gnome.unibenchmark.gschema.xml
po/: POTFILES  meson.build
src/: main.c  meson.build  style.css  unibenchmark.gresource.xml
src/gtkobjects/: info-unibenchmark.c  info-unibenchmark.h  meson.build  unibenchmark-window.c  unibenchmark-window.h
src/templates/: info-unibenchmark.ui  unibenchmark-window.ui
src/utils/: benchmark.c  benchmark.h  meson.build  system-info.c  system-info.h  wmi.c  wmi.h
